--- a/NotifyMe.API/Views/Shared/_Layout.cshtml
+++ b/NotifyMe.API/Views/Shared/_Layout.cshtml
@@ -87,6 +87,7 @@
     </footer>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
