--- a/NotifyMe.API/Views/Groups/Index.cshtml
+++ b/NotifyMe.API/Views/Groups/Index.cshtml
@@ -32,7 +32,7 @@
                     <tr data-row=">@item.Id">
                         <th scope="row">@count</th>
                         <td>
-                            <a class="btn link-primary" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.Name</a>
+                            <a class="btn link-primary p-0" data-bs-toggle="ajax-modal" data-bs-target="#modal-details" onclick="previewing('@item.Id')">@item.Name</a>
                         </td>
                         <td>@item.Description</td>
                         <td>
